add: queries and icons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/frontend/public/apple-touch.svg"
+    />
+    <link rel="icon" type="image/png" href="/frontend/public/favicon.svg" />
     <title>LitMood - From mood to book</title>
   </head>
   <body>
