--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,20 @@
     />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <title>LitMood - From mood to book</title>
+    <script
+    async
+    src={`https://www.googletagmanager.com/gtag/js?id=${import.meta.env.VITE_GA_MEASUREMENT_ID}`}
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+  
+    gtag("config", import.meta.env.VITE_GA_MEASUREMENT_ID);
+  </script>
+  
   </head>
   <body>
     <div id="root"></div>
