--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,27 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./public/apple-touch.svg"
-    />
+    <link rel="apple-touch-icon" href="./src/assets/apple-touch.png" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <title>LitMood - From mood to book</title>
-    <script
-    async
-    src={`https://www.googletagmanager.com/gtag/js?id=${import.meta.env.VITE_GA_MEASUREMENT_ID}`}
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-  
-    gtag("config", import.meta.env.VITE_GA_MEASUREMENT_ID);
-  </script>
-  
   </head>
   <body>
     <div id="root"></div>
